src/objects/Action__c.object
<CustomObject>
    <description>Inspection/complaint legal Actions.</description>
    <fields>
        <fullName>Attorney__c</fullName>
        <description>Attorney</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attorney</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to License</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Sanction_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legal Sanction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Action_Order_Type__c</fullName>
        <description>Action/Order Type</description>
        <label>Charges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cease and Desist Order w/ no CMP</fullName>
                </value>
                <value>
                    <fullName>Cease and Desist Order with CMP</fullName>
                </value>
                <value>
                    <fullName>CMP w/ Notice of Assessment &amp; CA</fullName>
                </value>
                <value>
                    <fullName>Consent Order</fullName>
                </value>
                <value>
                    <fullName>Consent Order for 6-161</fullName>
                </value>
                <value>
                    <fullName>Consent Order with CMP</fullName>
                </value>
                <value>
                    <fullName>Decision and Order</fullName>
                </value>
                <value>
                    <fullName>Deny Informal Settlement Conf.</fullName>
                </value>
                <value>
                    <fullName>Deny Motion to Set Aside Default</fullName>
                </value>
                <value>
                    <fullName>Deny Rehearing</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
                <value>
                    <fullName>Final Order with CMP</fullName>
                </value>
                <value>
                    <fullName>Grant Informal Settlement Conf.</fullName>
                </value>
                <value>
                    <fullName>Letter of Concern</fullName>
                </value>
                <value>
                    <fullName>Letter of Remedial Action</fullName>
                </value>
                <value>
                    <fullName>Letter of Understanding and Agreeme</fullName>
                </value>
                <value>
                    <fullName>Memorandum of Understanding</fullName>
                </value>
                <value>
                    <fullName>Notice of Hearing</fullName>
                </value>
                <value>
                    <fullName>Notice of Hearing and Complaint</fullName>
                </value>
                <value>
                    <fullName>Notice of Hearing for 6-161</fullName>
                </value>
                <value>
                    <fullName>Order Amending Order</fullName>
                </value>
                <value>
                    <fullName>Order Denying ISC</fullName>
                </value>
                <value>
                    <fullName>Order Modifying Order</fullName>
                </value>
                <value>
                    <fullName>Order of Additional Education</fullName>
                </value>
                <value>
                    <fullName>Order of Approval (FI)</fullName>
                </value>
                <value>
                    <fullName>Order of Exemption</fullName>
                </value>
                <value>
                    <fullName>Order of Probation</fullName>
                </value>
                <value>
                    <fullName>Order of Probation with Mentorship</fullName>
                </value>
                <value>
                    <fullName>Order of Revocation</fullName>
                </value>
                <value>
                    <fullName>Order of Summary Suspension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complaint</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Order_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Order Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanction_Comment__c</fullName>
        <label>Sanction Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Date__c</fullName>
        <label>Sanction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanction__c</fullName>
        <label>Sanction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cease and Desist</fullName>
                </value>
                <value>
                    <fullName>Child Support Suspension</fullName>
                </value>
                <value>
                    <fullName>Denial</fullName>
                </value>
                <value>
                    <fullName>Education Letter no further action</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Investigative Fees</fullName>
                </value>
                <value>
                    <fullName>License Revoked</fullName>
                </value>
                <value>
                    <fullName>License Suspension</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reprimand</fullName>
                </value>
                <value>
                    <fullName>Required class or course</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Stayed Revocation</fullName>
                </value>
                <value>
                    <fullName>Stayed Suspension</fullName>
                </value>
                <value>
                    <fullName>Summary  Suspension</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Voluntary Surrender of License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sanction</label>
    <nameField>
        <displayFormat>{YY}-{000}-DOL</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanctions</pluralLabel>
    <recordTypes>
        <fullName>Investigations_Demo</fullName>
        <active>true</active>
        <description>Investigation Demo Page Layout</description>
        <label>Sanctions Page</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>